Installed Tailwind (instead of using CDN. Start work on navbar. Added an image and favicon.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400..700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./js/script.js" defer></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Hazard Holz</title>
 </head>
 <body>
-    
+    <nav class="relative container mx-auto p-6">
+        <div class="flex items-center justify-between">
+            <div class="flex items-center space-x-20">
+                <h4 class="text-[#ff4500] font-bold">Hazard Holz</h4>
+                <div class="hidden space-x-8 font-bold lg:flex">
+                    <a href="#" class="text-[#333] hover:text-[#ff4500]">Camping</a>
+                    <a href="#" class="text-[#333] hover:text-[#ff4500]">Overseas</a>
+                    <a href="#" class="text-[#333] hover:text-[#ff4500]">Contact</a>
+                </div>
+            </div>
+            <div class="hidden items-center space-x-6 font-bold text-[#111]lg:flex"></div>
+            <div class="hover:text-[#ff4500]">Login</div>
+            <a href="#" class="px-8 py-3 font-bold text-[#ff4500] bg-[#111] rounded"></a>
+        </div>
+    </nav>
+    <script src="./js/script.js"></script>
 </body>
 </html>
