Setting up Tailwind.config

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <nav class="relative container mx-auto p-6">
         <div class="flex items-center justify-between">
             <div class="flex items-center space-x-20">
-                <h4 class="text-[#ff4500] font-bold">Hazard Holz</h4>
+                <h4 class="text-orange font-bold">Hazard Holz</h4>
                 <div class="hidden space-x-8 font-bold lg:flex">
-                    <a href="#" class="text-[#333] hover:text-[#ff4500]">Camping</a>
-                    <a href="#" class="text-[#333] hover:text-[#ff4500]">Overseas</a>
-                    <a href="#" class="text-[#333] hover:text-[#ff4500]">Contact</a>
+                    <a href="#" class="text-[#333] hover:text-orange">Camping</a>
+                    <a href="#" class="text-[#333] hover:text-orange">Overseas</a>
+                    <a href="#" class="text-[#333] hover:text-orange">Contact</a>
                 </div>
             </div>
             <div class="hidden items-center space-x-6 font-bold text-[#111]lg:flex"></div>
-            <div class="hover:text-[#ff4500]">Login</div>
-            <a href="#" class="px-8 py-3 font-bold text-[#ff4500] bg-[#111] rounded"></a>
+            <div class="hover:text-orange">Login</div>
+            <a href="#" class="px-8 py-3 font-bold text-orange bg-[#111] rounded"></a>
         </div>
     </nav>
     <script src="./js/script.js"></script>
