--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
     <nav class="relative container mx-auto p-6">
         <div class="flex items-center justify-between">
             <div class="flex items-center space-x-20">
-                <h4 class="text-orange font-bold">Hazard Holz</h4>
+                <h4 class="text-orange font-cursive font-bold text-3xl">Hazard Holz</h4>
                 <div class="hidden space-x-8 font-bold lg:flex">
-                    <a href="#" class="text-[#333] hover:text-orange">Camping</a>
-                    <a href="#" class="text-[#333] hover:text-orange">Overseas</a>
-                    <a href="#" class="text-[#333] hover:text-orange">Contact</a>
+                    <a href="#" class="text-greyMedium hover:text-orange">Camping</a>
+                    <a href="#" class="text-greyMedium hover:text-orange">Overseas</a>
+                    <a href="#" class="text-greyMedium hover:text-orange">Contact</a>
                 </div>
             </div>
-            <div class="hidden items-center space-x-6 font-bold text-[#111]lg:flex"></div>
-            <div class="hover:text-orange">Login</div>
-            <a href="#" class="px-8 py-3 font-bold text-orange bg-[#111] rounded"></a>
+            <div class="hidden items-center space-x-6 font-bold text-greyDark lg:flex">
+                <div class="font-bold hover:text-orange">Login</div>
+                <a href="#" class="px-8 py-3 font-bold text-orange bg-greyDark rounded-md text hover:opacity-70">Register</a>
+            </div>
+            
         </div>
+        
     </nav>
     <script src="./js/script.js"></script>
 </body>
