Theme of website changed to SEO website link generator. Also bringing in images from unDraw.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav class="relative container mx-auto p-6">
         <div class="flex items-center justify-between">
             <div class="flex items-center space-x-20">
-                <h4 class="text-orange font-cursive font-bold text-3xl">Hazard Holz</h4>
+                <h4 class="text-orange font-cursive font-bold text-3xl">Kwik Linx</h4>
                 <div class="hidden space-x-8 font-bold lg:flex">
-                    <a href="#" class="text-greyMedium hover:text-orange">Camping</a>
+                    <a href="#" class="text-greyMedium hover:text-orange">UK & Ireland</a>
                     <a href="#" class="text-greyMedium hover:text-orange">Overseas</a>
                     <a href="#" class="text-greyMedium hover:text-orange">Contact</a>
                 </div>
@@ -27,8 +27,22 @@
             </div>
             
         </div>
-        
+
     </nav>
+    <section id="hero">
+        <div class="container flex flex-col-reverse mx-auto p-6 lg:flex-row">
+            <div class="flex flex-col space-y-10 mb-44 lg:mt-16 lg:w-1/2 xl:mb-52">
+                <h1 class="text-5xl text-greyMedium font-bold text-center lg:text-6xl lg:max-w-md lg:text-left">Build fast and efficient links</h1>
+                <p class="text-2xl text-center text-orange lg:max-w-md lg:text-left">Using our quick links will help you get recognised and improve your website's performance.</p>
+                <div class="mx-auto lg:mx-0">
+                    <a href="" class="py-5 px-10 text-2xl font-bol text-orange bg-greyDark rounded-md lg:py-4 hover:opacity-70">Get Started</a>
+                </div>
+            </div>
+            <div class="mb-24 mx-auto md:w-180 lg:mb-0 lg:mt-14 lg:w-1/2">
+                <img src="./images/main.svg" alt="">
+            </div>
+        </div>
+    </section>
     <script src="./js/script.js"></script>
 </body>
 </html>
