Reboot repo as a Tailwind template

--- a/index.html
+++ b/index.html
@@ -3,87 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/icon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400..700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Kwik Linx</title>
+    <title>Tailwind Template</title>
 </head>
 <body>
-    <nav class="relative container mx-auto p-6">
-        <div class="flex items-center justify-between">
-            <div class="flex items-center space-x-20">
-                <h4 class="text-orange font-cursive font-bold text-3xl">Kwik Linx</h4>
-                <div class="hidden space-x-8 font-medium lg:flex">
-                    <a href="#" class="text-greyMedium hover:text-orange">UK & Ireland</a>
-                    <a href="#" class="text-greyMedium hover:text-orange">Overseas</a>
-                    <a href="#" class="text-greyMedium hover:text-orange">Contact</a>
-                </div>
-            </div>
-            <div class="hidden items-center space-x-6 font-medium text-greyDark lg:flex">
-                <div class="hover:text-orange">Login</div>
-                <a href="#" class="px-8 py-3 text-orange bg-greyDark rounded-md text hover:opacity-70">Register</a>
-            </div>
-            
-        </div>
-
-    </nav>
-    <section id="hero">
-        <div class="container flex flex-col-reverse mx-auto p-6 lg:flex-row">
-            <div class="flex flex-col space-y-10 mb-44 lg:mt-16 lg:w-1/2 xl:mb-52">
-                <h1 class="text-5xl text-greyMedium font-bold text-center lg:text-6xl lg:max-w-md lg:text-left">Build fast and efficient links</h1>
-                <p class="text-2xl text-center text-orange lg:max-w-md lg:text-left">Using our short links will help you get recognised and improve your website's performance.</p>
-                <div class="mx-auto lg:mx-0">
-                    <a href="" class="py-5 px-10 text-2xl font-bol text-orange bg-greyDark rounded-md lg:py-4 hover:opacity-70">Get Started</a>
-                </div>
-            </div>
-            <div class="mb-24 mx-auto md:w-180 lg:mb-0 lg:mt-14 lg:w-1/2">
-                <img src="./images/main.svg" alt="">
-            </div>
-        </div>
-    </section>
-    <section id="shorten" class="relative bg-greyLight">
-        <div class="max-w-4xl mx-auto p-6 space-y-6">
-            <form id="link-form" class="relative flex flex-col w-full p-10 -mt-20 space-y-4 bg-greyDark rounded-md md:flex-row md:space-y-0 md:space-x-3">
-                <input type="text" class="flex-1 p-3 border-2 border-orange rounded-md placeholder-greyMedium focus:outline-none" placeholder="Enter Link" id="link-input" />
-                <button class="px-10 py-3 text-greyDark bg-orange rounded-md hover:opacity-70 focus:outline-none md:py-2">Submit</button>
-            </form>
-            <div class="flex flex-col items-center justify-between w-full p-6 bg-orange rounded md md:flex-row">
-                <p class="font-medium text-center text-greyDark md:text-left">
-                    https://github.com/Nimira43
-                </p>
-                <div class="flex flex-col items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
-                    <div class="font-medium text-greyLight">
-                        https://urlis.net/1dk9p5j2
-                    </div>
-                    <button class="py-2 px-8 text-orange bg-greyDark rounded-md hover:opacity-70 focus:outline-none">Copy</button>
-                </div>
-            </div>
-            <div class="flex flex-col items-center justify-between w-full p-6 bg-orange rounded md md:flex-row">
-                <p class="font-medium text-center text-greyDark md:text-left">
-                    https://github.com/Nimira43/Kwik-Linx
-                </p>
-                <div class="flex flex-col items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
-                    <div class="font-medium text-greyLight">
-                        https://urlis.net/4fypqwb4
-                    </div>
-                    <button class="py-2 px-8 text-orange bg-greyDark rounded-md hover:opacity-70 focus:outline-none">Copy</button>
-                </div>
-            </div>
-            <div class="flex flex-col items-center justify-between w-full p-6 bg-orange rounded md md:flex-row">
-                <p class="font-medium text-center text-greyDark md:text-left">
-                    https://www.traversymedia.com/
-                </p>
-                <div class="flex flex-col items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
-                    <div class="font-medium text-greyLight">
-                        https://urlis.net/rjapb3wu
-                    </div>
-                    <button class="py-2 px-8 text-orange bg-greyDark rounded-md hover:opacity-70 focus:outline-none">Copy</button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <script src="./js/script.js"></script>
+    <h1>Old Project Abandoned</h1>
+    <p>Reboot repo as a Tailwind template</p>
 </body>
 </html>
