1st stage completed.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/billy.png">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Tailwind Template</title>
 </head>
 <body>
-    <h1>Old Project Abandoned</h1>
-    <p>Reboot repo as a Tailwind template</p>
+    <h1 class="text-3xl bg-[#111] text-[#ff4500] p-5">NimiraTech</h1>
 </body>
 </html>
