--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/billy.png">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Tailwind Template</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./images/TheFavicon.png">
+  <title>Palantir</title>
 </head>
 <body>
-    <h1 class="text-3xl bg-[#111] text-[#ff4500] p-5">NimiraTech</h1>
+  <h1>Palantir</h1>
 </body>
 </html>
