--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./images/TheFavicon.png">
+  <link rel="stylesheet" href="styles.css">
   <title>Palantir</title>
 </head>
 <body>
   <h1>Palantir</h1>
+  <script src="script.js"></script>
 </body>
 </html>
