--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <title>Palantir</title>
 </head>
 <body>
-  <h1>Palantir</h1>
+  <div id="videos">
+    <video class="video-player" id="user-1" autoplay playsinline></video>
+    <video class="video-player" id="user-2" autoplay playsinline></video>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
