--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Palantir</title>
 </head>
 <body>
+  <h1 class="logo">Palantir</h1>
   <div id="videos">
     <video class="video-player" id="user-1" autoplay playsinline></video>
     <video class="video-player" id="user-2" autoplay playsinline></video>
